# UsageMonitor

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/superpowers/specs/: 2026-06-19-ai-usage-monitor-design.md
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ccswitch.rs  db.rs  indexer.rs  lib.rs  main.rs  models.rs  query.rs  taskbar.rs  widget_mouse.rs  window_drag.rs  windows_topmost.rs
src-tauri/src/parsers/: claude.rs  codex.rs  mod.rs
src/components/: DetailPanel.tsx  HistoryPage.tsx  HoverDetailWindow.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/components/widgets/: CardWidget.tsx  GaugeWidget.tsx  PillWidget.tsx
src/hooks/: useTodaySummary.ts
src/lib/: api.ts  date.ts  drag.ts
